# ClamSecurity

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  setup.sh
resources/: ClamSecurity.qrc
scripts/: install.sh  io.github.clamsecurity.desktop  org.kde.clamsecurity.desktop
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: LanguageManager.cpp  LanguageManager.h  NotificationService.cpp  NotificationService.h
src/managers/: AutostartManager.cpp  AutostartManager.h  ClamAvManager.cpp  ClamAvManager.h  ClamdConfigManager.cpp  ClamdConfigManager.h  FreshclamConfigManager.cpp  FreshclamConfigManager.h  QuarantineManager.cpp  QuarantineManager.h  SchedulerManager.cpp  SchedulerManager.h  SystemChecker.cpp  SystemChecker.h  UFWManager.cpp  UFWManager.h
src/ui/: ActiveThreatsPage.cpp  ActiveThreatsPage.h  DatabasePage.cpp  DatabasePage.h  DetailsDialog.cpp  DetailsDialog.h  ExclusionsPage.cpp  ExclusionsPage.h  FirewallPage.cpp  FirewallPage.h  ModuleCard.cpp  ModuleCard.h  MonitorWidget.cpp  MonitorWidget.h  QuarantinePage.cpp  QuarantinePage.h  ScanPage.cpp  ScanPage.h  ScheduledScansPage.cpp  ScheduledScansPage.h  SettingsPage.cpp  SettingsPage.h
src/workers/: ScanWorker.cpp  ScanWorker.h
translations/: ClamSecurity_es.ts
